[tool.poetry]
name = "12factor-configclasses"
version = "0.2.8"
description = "Like dataclasses but for config."
authors = ["Pablo Cabezas <pabcabsal@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kingoodie/configclasses"
repository = "https://github.com/kingoodie/configclasses"

packages = [
    { include = "configclasses" },
]

[tool.poetry.dependencies]
python = "^3.8"
tomlkit = {version = "^0.5", extras = ["toml"], optional = true}
python-dotenv = {version = "^0.11", extras = ["dotenv"], optional = true}
pyyaml = {version = "^5", extras = ["yaml"], optional = true}

[tool.poetry.extras]
toml = ["tomlkit"]
dotenv = ["python-dotenv"]
yaml = ["pyyaml"]
full = ["tomlkit", "python-dotenv", "pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^5"
tomlkit = {version = "^0.5"}
python-dotenv = {version = "^0.11"}
pyyaml = {version = "^5"}
pytest-mypy = "^0.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
