[tool.poetry]
name = "12factor-configclasses"
version = "1.0.0"
description = "Like dataclasses but for config."
authors = ["Pablo Cabezas <pabcabsal@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kingoodie/configclasses"
repository = "https://github.com/kingoodie/configclasses"

packages = [
    { include = "configclasses" },
]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = {version = "^0.7", extras = ["toml"], optional = true}
python-dotenv = {version = "^0.19", extras = ["dotenv"], optional = true}
pyyaml = {version = "^6", extras = ["yaml"], optional = true}

[tool.poetry.extras]
toml = ["tomlkit"]
dotenv = ["python-dotenv"]
yaml = ["pyyaml"]
full = ["tomlkit", "python-dotenv", "pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^6"
tomlkit = {version = "^0.7"}
python-dotenv = {version = "^0.19"}
pyyaml = {version = "^6"}
pytest-mypy = "^0.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
