[tool.poetry]
name = "12factor-configclasses"
version = "2.0.0"
description = "Like dataclasses but for config."
authors = ["Pablo Cabezas <pabcabsal@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/kingoodie/configclasses"
repository = "https://github.com/kingoodie/configclasses"

packages = [
    { include = "configclasses" },
]

[tool.poetry.dependencies]
python = "^3.10"
tomlkit = {version = "^0.12", extras = ["toml"], optional = true}
python-dotenv = {version = "^1.0", extras = ["dotenv"], optional = true}
pyyaml = {version = "^6", extras = ["yaml"], optional = true}

[tool.poetry.extras]
toml = ["tomlkit"]
dotenv = ["python-dotenv"]
yaml = ["pyyaml"]
full = ["tomlkit", "python-dotenv", "pyyaml"]

[tool.poetry.dev-dependencies]
pytest = "^7.4"
tomlkit = {version = "^0.12"}
python-dotenv = {version = "^1.0"}
pyyaml = {version = "^6"}
pytest-mypy = "^0.10"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
